# squashfs-tools-ng

./: .gitignore  .tags  .travis.yml  CHANGELOG.md  COPYING.md  Doxyfile.in  Makefile.am  README  README.md  autogen.sh  configure.ac  coverity.sh  mksrcrelease.sh  mkwinbins.sh  squashfs-tools-ng.sln  squashfs-tools-ng.vcxproj
.github/workflows/: codeql-analysis.yml
difftool/: Makemodule.am  compare_dir.c  compare_file.c  compare_files.c  compare_files_sqfs.c  difftool.h  extract.c  fscompare.c  node_compare.c  options.c  sqfsdiff.c  sqfsdiff.h  super.c  util.c
doc/: Makemodule.am  architecture.md  benchmark.ods  benchmark.txt  format.adoc  format.txt  gensquashfs.1  mainpage.dox  parallelism.txt  rdsquashfs.1  sqfs2tar.1  sqfsdiff.1  tar2sqfs.1
extras/: Makemodule.am  browse.c  extract_one.c  list_files.c  mk42sqfs.c  mknastyfs.c
include/: array.h  block_processor.h  common.h  compat.h  compress.h  compress_cli.h  data_reader.h  data_writer.h  dir_tree.h  dir_tree_iterator.h  frag_reader.h  fstream.h  fstree.h  hash_table.h  highlevel.h  id_table.h  mempool.h  meta_reader.h  meta_writer.h  rbtree.h  simple_writer.h  squashfs.h  str_table.h  table.h  tar.h  threadpool.h  util.h  w32threadwrap.h  xattr_reader.h
include/io/: dir_entry.h  dir_iterator.h  dir_tree_iterator.h  file.h  istream.h  mem.h  ostream.h  std.h  xattr.h  xfrm.h
include/sqfs/: block.h  block_processor.h  block_writer.h  compress.h  compressor.h  data.h  data_reader.h  data_writer.h  dir.h  dir_entry.h  dir_reader.h  dir_writer.h  error.h  frag_table.h  id_table.h  inode.h  io.h  meta_reader.h  meta_writer.h  predef.h  super.h  table.h  xattr.h  xattr_reader.h  xattr_writer.h
include/tar/: format.h  tar.h
include/util/: compat.h  dir_iterator.h  dir_tree_iterator.h  hash_table.h  parse.h  rbtree.h  str_table.h  strlist.h  test.h  util.h
include/win32/: config.h
include/xfrm/: compress.h  stream.h  wrap.h
lib/: Makemodule.am
lib/common/: Makemodule.am  comp_lzo.c  comp_opt.c  compress.c  data_reader_dump.c  data_writer.c  data_writer_ostream.c  dirstack.c  filename_sane.c  get_path.c  hardlink.c  inode_stat.c  io_stdin.c  libcommon.vcxproj  libcommon.vcxproj.filters  mkdir_p.c  parse_size.c  perror.c  print_version.c  serialize_fstree.c  statistics.c  write_export_table.c  writer.c
lib/comp/: block_processor.c  block_processor_parallel.c  compressor.c  create_block.c  gzip.c  internal.h  lz4.c  lzma.c  lzo.c  process_block.c  xz.c  zlib.c  zstd.c
lib/compat/: Makemodule.am  chdir.c  fnmatch.c  getline.c  getopt_long.c  getsubopt.c  libcompat.vcxproj  libcompat.vcxproj.filters  mockups.c  path_to_windows.c  strchrnul.c  strndup.c  w32_perror.c  w32_stdio.c  w32_wmain.c
lib/fstream/: Makemodule.am  compressor.c  internal.h  ostream.c  printf.c
lib/fstree/: Makemodule.am  add_by_path.c  canonicalize_name.c  deduplicate.c  filename_sane.c  fstree.c  fstree_from_dir.c  fstree_from_file.c  fstree_sort.c  gen_file_list.c  gen_inode_numbers.c  gen_inode_table.c  get_path.c  hardlink.c  internal.h  libfstree.vcxproj  libfstree.vcxproj.filters  mknode.c  node_from_path.c  node_stat.c  optimize_unpack_order.c  post_process.c  selinux.c  sort_by_file.c  source_date_epoch.c  xattr.c
lib/io/: Makemodule.am  get_line.c  internal.h  istream.c  ostream.c  xfrm.c
lib/lz4/: Makemodule.am  README  lz4.h  lz4hc.c
lib/sqfs/: Makemodule.am  alloc.c  block_processor.c  block_processor_parallel.c  block_writer.c  data_reader.c  data_writer.c  deserialize_fstree.c  dir_reader.c  dir_writer.c  frag_reader.c  frag_table.c  id_table.c  id_table_read.c  id_table_write.c  inode.c  io.c  io_file.c  io_stdin.c  libsqfs.vcxproj  libsqfs.vcxproj.filters  libsquashfs.pc.in  libsquashfs1.pc.in  meta_reader.c  meta_writer.c  misc.c  process_block.c  read_inode.c  read_super.c  read_table.c  read_tree.c  readdir.c  serialize_fstree.c  sqfs_reader.c  statistics.c  str_table.c  super.c  table.c  tree_node_from_inode.c  util.h  (+8 more)
lib/sqfshelper/: Makemodule.am  comp_opt.c  compress.c  data_reader.c  data_reader_dump.c  data_writer.c  deserialize_fstree.c  get_path.c  inode_stat.c  io_stdin.c  perror.c  print_version.c  serialize_fstree.c  sqfs_reader.c  statistics.c  tree_node_from_inode.c  tree_node_to_inode.c  write_dir.c  write_export_table.c  write_inode.c  write_xattr.c  writer.c  xattr_reader.c
lib/tar/: Makemodule.am  base64.c  checksum.c  cleanup.c  internal.h  libtar.vcxproj  libtar.vcxproj.filters  number.c  padd_file.c  pax_header.c  read_header.c  read_retry.c  read_sparse_map.c  read_sparse_map_new.c  read_sparse_map_old.c  record_to_memory.c  skip.c  urldecode.c  write_header.c  write_retry.c
lib/util/: Makemodule.am  alloc.c  array.c  canonicalize_name.c  crc32.c  dirstack.c  fast_urem_by_const.h  (+25 more)
licenses/: 0BSD.txt  hash_table.txt  xxhash.txt  xz.txt  zstd.txt
m4/: zstd.m4
mkfs/: Makemodule.am  block.c  dirscan.c  meta.c  meta_writer.c  meta_writer.h  mkfs.c  mkfs.h  mksquashfs.c  mksquashfs.h  options.c  options.h  selinux.c  super.c  write_dir.c  write_inode.c  xattr.c
scripts/: coverity.sh  lib_syms_sane.sh  mksrcrelease.sh  mkwinbins.sh  w32devenv.sh
tar/: Makemodule.am  read_header.c  sqfs2tar.c  tar.h  tar2sqfs.c  write_header.c
tests/: Makemodule.am  abi.c  add_by_path.c  blk_proc_order.c  canonicalize_name.c  cantrbry.sh.in  crc32.c  filename_sane.c  fstree_from_dir.c  fstree_from_file.c  fstree_fuzz.c  fstree_glob1.c  fstree_glob1.txt  fstree_glob2.txt  fstree_init.c  fstree_sort.c  fstree_xattr.c  gen_inode_numbers.c  gen_inode_table.c  get_line.c  get_path.c  mknode_dir.c  mknode_reg.c  mknode_simple.c  mknode_slink.c  pack_dir_root.sh.in  pack_dir_root.txt.ref  rbtree.c  str_table.c  tar_big_file.c  tar_big_size.c  tar_formats.c  tar_fuzz.c  tar_gnu.c  tar_large_uid.c  tar_long_paths.c  tar_mtime.c  tar_pax.c  tar_simple.c  tar_sparse.c  (+15 more)
unpack/: Makemodule.am  describe.c  dump_xattrs.c  extract_file.c  fill_files.c  list_files.c  optimize_unpack_order.c  options.c  rdsquashfs.c  rdsquashfs.h  read_fstree.c  restore_fstree.c  tree_node_from_inode.c  unsquashfs.c  unsquashfs.h
(+425 files in other folders)
